Building on prior changes to get it running on Plasma 5.

--- a/metadata.desktop
+++ b/metadata.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=Dashboard
+Name=Dashboard-2
 Comment=Actos Dashboard controlling windows, applications and activities
 Icon=dashboard-show
 
